<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_FWM" Id="{f779eb75-52be-49f4-8215-82075f255b6e}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
    (*
    {attribute 'pytmc' := 'pv: DREAM:COIL'}
    {attribute 'TcLinkTo' := '.iRaw := TIIB[K4S8_DRL_03_E21_EL3052]^AI Standard Channel 1^Value'}
    fbDreamCoilFlowMeter : FB_FDQ_FlowMeter;
    *)

    {attribute 'TcLinkTo' := '.iRaw	:=	TIIB[K4S8_DRL_03_E21_EL3052]^AI Standard Channel 1^Value'}
    fbCoilFlowMeter : FB_AnalogInput := (iTermBits:=15, fTermMax:=60, fTermMin:=0);

    {attribute 'pytmc' := '
        pv: DREAM:COIL:FWM:VAL
        io: i
        field: EGU "lpm"
    '}
    fCoilCoolantFlowMeterRBV : LREAL;

    //Coil PS Current Monitoring
    {attribute 'TcLinkTo' := '.iRaw	:=	TIIB[K4S8_DRL_04_E16_EL3174-0002]^AI Standard Channel 4^Value'}
    fbCoilCurrentMonitoring : FB_AnalogInput := (iTermBits:=15, fTermMax:=310, fTermMin:=0);

    {attribute 'pytmc' := '
        pv: DREAM:COIL:CURRENT:VAL
        io: i
        field: EGU "A"
        field: PREC "2"
    '}
    fCoilCurrentRBV : LREAL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>