<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PRG_COIL_PS_ILK" Id="{3fe79328-964f-4827-83b5-a95ad08eb1c0}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_COIL_PS_ILK
VAR
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*Interlock logic for Coil PS based on reading from Flow meter*)
fbCoilFlowMeter();
fCoilCoolantFlowMeterRBV := fbCoilFlowMeter.fReal;

//evaluate flow meter readback to Interlock interlock Coil PS
bCoilPS_ILK := fbCoilFlowMeter.fReal > 3.0; //If flow meter reading is above XX is ok to turn ON output of the Coil PS. Units are lpm

//fbDreamCoilFlowMeter();
//bCoilPS_ILK := fbDreamCoilFlowMeter.fbFlowMeter.fReal > 3; //If flow meter reading is above XX is ok to turn ON output of the Coil PS. Units are lpm

(*DREAM Coil PS Current Monitoring*)
fbCoilCurrentMonitoring();
fCoilCurrentRBV := fbCoilCurrentMonitoring.fReal;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>